--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,13 @@ openai==0.27.7
 Pillow==9.5.0
 proglog==0.1.10
 pydub==0.25.1
+python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
 SpeechRecognition==3.9.0
 sqlparse==0.4.4
 tqdm==4.65.0
-typing-extensions==4.6.3
+typing_extensions==4.6.3
 urllib3==2.0.2
 yarl==1.9.2
 zipp==3.15.0
